--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fjy.demoapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".DemoApp"
         android:allowBackup="true"
@@ -21,7 +23,8 @@
         <activity android:name=".twochildren.TwoChildrenActivity" />
         <activity android:name=".list.PlainListActivity" />
         <activity android:name=".multitype.MutiTypeActivity" />
-        <activity android:name=".BaseActivity"></activity>
+        <activity android:name=".BaseActivity" />
+        <activity android:name=".state.StateActivity"></activity>
     </application>
 
 </manifest>
